--- a/XXXXX_signedin/templates/XXXXX_signedin/index.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/index.html
@@ -2,25 +2,16 @@
 {% load static_tags %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        {% include "./shared/head.html" %}
-    </head>
+    <head>{% include "./shared/head.html" %}</head>
     <body>
         {% include "./shared/notifications.html" %}
         <div class="container">
-          {% include "./shared/top_nav.html" %}
-        
-          <div>
-            <h1>Signedin Template</h1>
-
-            <div>Front Page</div>
-          </div>
-
-          {% include "./shared/footer.html" %}
+            {% include "./shared/top_nav.html" %}
+            <div>
+                <h1>Signedin Template</h1>
+                <div>Front Page</div>
+            </div>
+            {% include "./shared/footer.html" %}
         </div>
     </body>
 </html>
-
-
-
-    
