--- a/XXXXX_signedin/templates/XXXXX_signedin/signedin/index.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/signedin/index.html
@@ -2,28 +2,18 @@
 {% load static_tags %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        {% include "../shared/head.html" %}
-    </head>
+    <head>{% include "../shared/head.html" %}</head>
     <body>
         {% include "../shared/notifications.html" %}
         <div class="container">
-          {% include "../shared/top_nav.html" %}
-        
-        <div>
-            <div role="group">
-                <div id="leftNav">{% include "./shared/side_nav.html" %}</div>
-                <div id="dashboardContent">
-                    Logged in Dashboard Home
+            {% include "../shared/top_nav.html" %}
+            <div>
+                <div role="group">
+                    <div id="leftNav">{% include "./shared/side_nav.html" %}</div>
+                    <div id="dashboardContent">Logged in Dashboard Home</div>
                 </div>
             </div>
-        </div>
-
-          {% include "../shared/footer.html" %}
+            {% include "../shared/footer.html" %}
         </div>
     </body>
 </html>
-
-
-
-    
