add pdf to homepage

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -18,6 +18,9 @@
                         <li>
                             <a href="https://handland.lol/">HandLand.lol</a> - Create live AI multiplayer games using WebRTC, Websockets, and Roboflow for AI vision models.
                         </li>
+                        <li>
+                            <a href="https://pdf.darefail.com/">PDF.darefail.com</a> - Crop and OCR PDFs in the Browser with the Delete Your PDF library
+                        </li>
                     </ul>
                 </div>
             </div>
