--- a/XXXXX_signedin/templates/XXXXX_signedin/account/logout.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/logout.html
@@ -26,7 +26,7 @@
                             <div class="field is-grouped">
                                 <div class="control">
                                     <input class="button is-primary" type="submit" value="Sign Out">
-                                    <a class="button is-primary is-outlined" href="{% url 'web:home' %}">
+                                    <a class="button is-primary is-outlined" href="{% url 'home' %}">
                                         <span class="icon">
                                             <i class="fa fa-home"></i>
                                         </span>
