--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_change.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_change.html
@@ -7,12 +7,15 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        {% include "../shared/top_nav.html" %}
         {% include "../shared/notifications.html" %}
-        <div class="container my-3">
-            <div class="row">
-                <div class="col-xxl-2 col-lg-3">{% include "../signedin/shared/side_nav.html" %}</div>
-                <div class="col-lg">
+        <div class="container">
+            {% include "../shared/top_nav.html" %}
+
+            <div class="left-menu-container">
+                <div class="left-side-menu">
+                    {% include "../signedin/shared/side_nav.html" %}
+                </div>
+                <div class="right-side-content">
                     <section class="app-card">
                         <h3 class="lead">Change Password</h3>
                         <form method="post"
@@ -28,6 +31,7 @@
                     </section>
                 </div>
             </div>
+
         </div>
         {% include "../shared/footer.html" %}
     </body>
