--- a/XXXXX_signedin/templates/XXXXX_signedin/account/group_membership_details.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/group_membership_details.html
@@ -5,12 +5,15 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        {% include "../shared/top_nav.html" %}
         {% include "../shared/notifications.html" %}
-        <div class="container my-3">
-            <div class="row">
-                <div class="col-xxl-2 col-lg-3">{% include "../signedin/shared/side_nav.html" %}</div>
-                <div class="col-lg">
+        <div class="container">
+            {% include "../shared/top_nav.html" %}
+
+            <div class="left-menu-container">
+                <div class="left-side-menu">
+                    {% include "../signedin/shared/side_nav.html" %}
+                </div>
+                <div class="right-side-content">
                     <nav aria-label="breadcrumbs">
                         <ol class="pg-breadcrumbs">
                             <li>
