--- a/XXXXX_signedin/templates/XXXXX_signedin/account/hijack.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/hijack.html
@@ -5,12 +5,15 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        {% include "../shared/top_nav.html" %}
         {% include "../shared/notifications.html" %}
-        <div class="container my-3">
-            <div class="row">
-                <div class="col-xxl-2 col-lg-3">{% include "../signedin/shared/side_nav.html" %}</div>
-                <div class="col-lg">
+        <div class="container">
+            {% include "../shared/top_nav.html" %}
+
+            <div class="left-menu-container">
+                <div class="left-side-menu">
+                    {% include "../signedin/shared/side_nav.html" %}
+                </div>
+                <div class="right-side-content">
                     <section class="app-card">
                         <h3 class="title">Impersonate a User</h3>
                         <p class="lead">Use the form below to temporarily login to the site as someone else. Use this feature responsibly!</p>
