--- a/XXXXX_signedin/templates/XXXXX_signedin/account/manage_group.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/manage_group.html
@@ -5,15 +5,19 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        {% include "../shared/top_nav.html" %}
         {% include "../shared/notifications.html" %}
-        <div class="container my-3">
-            <div class="row">
-                <div class="col-xxl-2 col-lg-3">{% include "../signedin/shared/side_nav.html" %}</div>
-                <div class="col-lg">
+        <div class="container">
+            {% include "../shared/top_nav.html" %}
+
+            <div class="left-menu-container">
+                <div class="left-side-menu">
+                    {% include "../signedin/shared/side_nav.html" %}
+                </div>
+                <div class="right-side-content">
                     <div>Manage Group</div>
                 </div>
             </div>
+
         </div>
         {% include "../shared/footer.html" %}
     </body>
