--- a/XXXXX_signedin/templates/XXXXX_signedin/account/account_inactive.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/account_inactive.html
@@ -6,8 +6,10 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        <h1>Account Inactive</h1>
-        <p>This account is inactive.</p>
-        {% include "../shared/footer.html" %}
+        <div class="container marginTop">
+            <h1>Account Inactive</h1>
+            <p>This account is inactive.</p>
+            {% include "../shared/footer.html" %}
+        </div>
     </body>
 </html>
