--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_set.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_set.html
@@ -6,21 +6,23 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        <h1>Set Password</h1>
-        {% url 'account_set_password' as action_url %}
-        {% element form method="post" action=action_url %}
-        {% slot body %}
-        {% csrf_token %}
-        {{ redirect_field }}
-        {% element fields form=form %}
-    {% endelement %}
-{% endslot %}
-{% slot actions %}
-{% element button type="submit" name="action" %}
-Set Password
-{% endelement %}
-{% endslot %}
-{% endelement %}
-{% include "../shared/footer.html" %}
+        <div class="container marginTop">
+            <h1>Set Password</h1>
+            {% url 'account_set_password' as action_url %}
+            {% element form method="post" action=action_url %}
+                {% slot body %}
+                {% csrf_token %}
+                {{ redirect_field }}
+                {% element fields form=form %}
+            {% endelement %}
+        {% endslot %}
+        {% slot actions %}
+        {% element button type="submit" name="action" %}
+        Set Password
+        {% endelement %}
+        {% endslot %}
+        {% endelement %}
+        {% include "../shared/footer.html" %}
+    </div>
 </body>
 </html>
