--- a/XXXXX_signedin/templates/XXXXX_signedin/account/signup.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/signup.html
@@ -4,7 +4,7 @@
 {% load allauth account %}
 {% load socialaccount %}
 <div class="container">
-    <div>
+    <div class="marginTop">
         <h3>Sign Up</h3>
         <form method="post">
             {% csrf_token %}
