--- a/XXXXX_signedin/templates/XXXXX_signedin/account/signup_closed.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/signup_closed.html
@@ -6,8 +6,10 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        <h1>Sign Up Closed</h1>
-        <p>We are sorry, but the sign up is currently closed.</p>
-        {% include "../shared/footer.html" %}
+        <div class="container marginTop">
+            <h1>Sign Up Closed</h1>
+            <p>We are sorry, but the sign up is currently closed.</p>
+            {% include "../shared/footer.html" %}
+        </div>
     </body>
 </html>
