--- a/XXXXX_signedin/templates/XXXXX_signedin/account/confirm_email_verification_code.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/confirm_email_verification_code.html
@@ -6,30 +6,32 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        <h1>Enter Email Verification Code</h1>
-        {% setvar email_link %}
-        <a href="mailto:{{ email }}">{{ email }}</a>
-    {% endsetvar %}
-    <p>We’ve sent a code to {{ email_link }}. The code expires shortly, so please enter it soon.</p>
-    {% url 'account_email_verification_sent' as action_url %}
-    {% element form form=form method="post" action=action_url tags="entrance,email,verification" %}
-    {% slot body %}
-    {% csrf_token %}
-    {% element fields form=form unlabeled=True %}
-{% endelement %}
-{{ redirect_field }}
-{% endslot %}
-{% slot actions %}
-{% element button type="submit" tags="prominent,confirm" %}
-Confirm
-{% endelement %}
-{% endslot %}
-{% endelement %}
-<h2>
-    {% element button href=cancel_url tags="link,cancel" %}
-    Cancel
-{% endelement %}
-</h2>
-{% include "../shared/footer.html" %}
+        <div class="container marginTop">
+            <h1>Enter Email Verification Code</h1>
+            {% setvar email_link %}
+                <a href="mailto:{{ email }}">{{ email }}</a>
+            {% endsetvar %}
+            <p>We’ve sent a code to {{ email_link }}. The code expires shortly, so please enter it soon.</p>
+            {% url 'account_email_verification_sent' as action_url %}
+            {% element form form=form method="post" action=action_url tags="entrance,email,verification" %}
+            {% slot body %}
+            {% csrf_token %}
+            {% element fields form=form unlabeled=True %}
+        {% endelement %}
+        {{ redirect_field }}
+        {% endslot %}
+        {% slot actions %}
+        {% element button type="submit" tags="prominent,confirm" %}
+        Confirm
+        {% endelement %}
+        {% endslot %}
+        {% endelement %}
+        <h2>
+            {% element button href=cancel_url tags="link,cancel" %}
+            Cancel
+        {% endelement %}
+        </h2>
+        {% include "../shared/footer.html" %}
+    </div>
 </body>
 </html>
