--- a/XXXXX_signedin/templates/XXXXX_signedin/account/confirm_login_code.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/confirm_login_code.html
@@ -6,31 +6,33 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        <h1>Enter Sign-In Code</h1>
-        {% setvar email_link %}
-        <a href="mailto:{{ email }}">{{ email }}</a>
-    {% endsetvar %}
-    <p>We’ve sent a code to {{ email_link }}. The code expires shortly, so please enter it soon.</p>
-    {% url 'account_confirm_login_code' as login_url %}
-    {% element form form=form method="post" action=login_url tags="entrance,login" %}
-    {% slot body %}
-    {% csrf_token %}
-    {% element fields form=form unlabeled=True %}
-{% endelement %}
-{{ redirect_field }}
-{% endslot %}
-{% slot actions %}
-{% element button type="submit" tags="prominent,login" %}
-Sign In
-{% endelement %}
-{% endslot %}
-{% endelement %}
-<h2>
-    {% url 'account_login' as login_url %}
-    {% element button href=login_url tags="link" %}
-    Other sign-in options
-{% endelement %}
-</h2>
-{% include "../shared/footer.html" %}
+        <div class="container marginTop">
+            <h1>Enter Sign-In Code</h1>
+            {% setvar email_link %}
+                <a href="mailto:{{ email }}">{{ email }}</a>
+            {% endsetvar %}
+            <p>We’ve sent a code to {{ email_link }}. The code expires shortly, so please enter it soon.</p>
+            {% url 'account_confirm_login_code' as login_url %}
+            {% element form form=form method="post" action=login_url tags="entrance,login" %}
+            {% slot body %}
+            {% csrf_token %}
+            {% element fields form=form unlabeled=True %}
+        {% endelement %}
+        {{ redirect_field }}
+        {% endslot %}
+        {% slot actions %}
+        {% element button type="submit" tags="prominent,login" %}
+        Sign In
+        {% endelement %}
+        {% endslot %}
+        {% endelement %}
+        <h2>
+            {% url 'account_login' as login_url %}
+            {% element button href=login_url tags="link" %}
+            Other sign-in options
+        {% endelement %}
+        </h2>
+        {% include "../shared/footer.html" %}
+    </div>
 </body>
 </html>
