--- a/XXXXX_signedin/templates/XXXXX_signedin/account/login.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/login.html
@@ -7,8 +7,8 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        <div class="container d-flex justify-content-center my-3">
-            <div>
+        <div class="container">
+            <div class="marginTop">
                 <h3>Sign In</h3>
                 <form method="post" class="mt-3">
                     {% csrf_token %}
