--- a/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset_from_key_done.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/password_reset_from_key_done.html
@@ -6,14 +6,16 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        <h1 class="title is-size-4">Change Password</h1>
-        <div class="content">
-            <p>Your password has been changed.</p>
-            <p>
-                {% url 'account_login' as login_url %}
-                You can now <a href="{{ login_url }}">login</a> with your new password.
-            </p>
+        <div class="container marginTop">
+            <h1 class="title is-size-4">Change Password</h1>
+            <div class="content">
+                <p>Your password has been changed.</p>
+                <p>
+                    {% url 'account_login' as login_url %}
+                    You can now <a href="{{ login_url }}">login</a> with your new password.
+                </p>
+            </div>
+            {% include "../shared/footer.html" %}
         </div>
-        {% include "../shared/footer.html" %}
     </body>
 </html>
