--- a/XXXXX_signedin/templates/XXXXX_signedin/account/reauthenticate.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/reauthenticate.html
@@ -6,34 +6,36 @@
 <html lang="en">
     <head>{% include "../shared/head.html" %}</head>
     <body>
-        <h1>Confirm Access</h1>
-        <p>Please reauthenticate to safeguard your account.</p>
-        <p>Enter your password:</p>
-        {% url 'account_reauthenticate' as action_url %}
-        {% element form form=form method="post" action=action_url %}
-        {% slot body %}
-        {% csrf_token %}
-        {% element fields form=form unlabeled=True %}
-    {% endelement %}
-    {{ redirect_field }}
-{% endslot %}
-{% slot actions %}
-{% element button type="submit" tags="primary,reauthenticate" %}
-Confirm
-{% endelement %}
-{% endslot %}
-{% endelement %}
-{% if reauthentication_alternatives %}
-    <hr />
-    <h2>Alternative options</h2>
-    {% element button_group %}
-    {% for alt in reauthentication_alternatives %}
-        {% element button href=alt.url tags="primary,outline" %}
-        {{ alt.description }}
-    {% endelement %}
-{% endfor %}
-{% endelement %}
-{% endif %}
-{% include "../shared/footer.html" %}
+        <div class="container marginTop">
+            <h1>Confirm Access</h1>
+            <p>Please reauthenticate to safeguard your account.</p>
+            <p>Enter your password:</p>
+            {% url 'account_reauthenticate' as action_url %}
+            {% element form form=form method="post" action=action_url %}
+                {% slot body %}
+                {% csrf_token %}
+                {% element fields form=form unlabeled=True %}
+            {% endelement %}
+            {{ redirect_field }}
+        {% endslot %}
+        {% slot actions %}
+        {% element button type="submit" tags="primary,reauthenticate" %}
+        Confirm
+        {% endelement %}
+        {% endslot %}
+        {% endelement %}
+        {% if reauthentication_alternatives %}
+            <hr />
+            <h2>Alternative options</h2>
+            {% element button_group %}
+            {% for alt in reauthentication_alternatives %}
+                {% element button href=alt.url tags="primary,outline" %}
+                {{ alt.description }}
+            {% endelement %}
+        {% endfor %}
+        {% endelement %}
+        {% endif %}
+        {% include "../shared/footer.html" %}
+    </div>
 </body>
 </html>
